--- a/_includes/world/2024/agenda-page.html
+++ b/_includes/world/2024/agenda-page.html
@@ -39,11 +39,11 @@
                 '/world/2024/agenda/day-0'
             )
         ">
-            <p class="dayText">Wensday</p>
+            <p class="dayText">Wednesday</p>
             <p class="dateText">Sept 25</p>
         </div>
-            <div class="tabContainer one {{ dayOneActive }}" role="button" tabindex="1" title="Day One"
-                aria-label="View day ones agenda" onclick="openWindow(
+            <div class="tabContainer one {{ dayOneActive }}" role="button" tabindex="0" title="Day One"
+                aria-label="View day two's agenda" onclick="openWindow(
                 '/world/2024/agenda/day-1'
                 )
             " onkeydown="
@@ -55,8 +55,8 @@
                 <p class="dayText">Thursday</p>
                 <p class="dateText">Sept 26</p>
             </div>
-            <div class="tabContainer two {{ dayTwoActive }}" role="button" tabindex="2" title="Day Two"
-                aria-label="View day two's agenda" onclick="openWindow(
+            <div class="tabContainer two {{ dayTwoActive }}" role="button" tabindex="0" title="Day Two"
+                aria-label="View day three's agenda" onclick="openWindow(
                 '/world/2024/agenda/day-2'
                 )
             " onkeydown="
