--- a/_sass/world/2024/modules/_agenda.scss
+++ b/_sass/world/2024/modules/_agenda.scss
@@ -67,6 +67,10 @@
                     border-bottom: 0;
                 }
 
+                &.one {
+                    border-bottom: 0;
+                }
+
                 &.two {
                     border-radius: 0 10px 0 0;
                     border-left: 0;
