add missing dates

--- a/_includes/world/2024/speaker-session-card.html
+++ b/_includes/world/2024/speaker-session-card.html
@@ -46,8 +46,10 @@
         {% include world/2024/icons/calendar.html %}
 
         {% if day_segment == "day-0" %}
-        <p>September 26th</p>
+        <p>September 25th</p>
         {% elsif day_segment == "day-1" %}
+        <p>September 26th</p>
+        {% elsif day_segment == "day-2" %}
         <p>September 27th</p>
         {% endif %}
     </div>
